upgrades, fixes, enhancements